--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "confetti/ignition": "1.x",
         "fakerphp/faker": "^1.23",
         "symfony/http-foundation": "^7.1"
     },
@@ -19,7 +20,7 @@
             "email": "seriquynh@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require-dev": {
         "symfony/var-dumper": "^7.1"
     },
